--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <section class="about" id="propos">
         <div class="main">
-            <img src="images/photo.jpg" alt="">
+            <img src="images/photo.JPG" alt="">
             <div class="about-text">
                 <h2>About Me</h2>
                 <h5><span>Cybersecurity & Development</span> Student</h5>
