--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h2>About Me</h2>
                 <h5><span>Cybersecurity & Development</span> Student</h5>
                 <p>I am a student in a <span>IT program field</span> . I'm learning <span>computer 
-                    development</span>, and <span>cybersecurity</span>. After my 2 years of BTS SIO, I plan to 
+                    development</span>, and <span>cybersecurity</span>. After my 2 years of BTS SIO option SISR, I plan to 
                     specialize in a <span>license of cybersecurity</span> and deepen my knowledge in this
                     field by doing a <span>Master</span>. Cybersecurity is a field that I am very <span>passionate</span> 
                     about and I am <span>motivated</span> to learn more about it.</p>
@@ -84,8 +84,8 @@
                     <i class="fa-solid fa-bars"></i>
                     <h5>BTS SIO</h5>
                     <div class="pra">
-                        <p>In my BTS, there is two options, the first one is SLAM for program development.
-                            The second option is the SISR option which concerns the network.
+                        <p>In my BTS, there is two options, the first one is SISR option which concerns the network.
+                            The second option is SLAM for program development.
                         </p>
                         <p style="text-align: center;">
                             <a class="button" href="images/Referenciel_BTS_SIO.pdf" target="_blank">Read More</a>
@@ -95,9 +95,9 @@
                 
                 <div class="card">
                     <i class="fa-solid fa-laptop-code"></i>
-                    <h5>SLAM Option</h5>
+                    <h5>SISR Option</h5>
                     <div class="pra">
-                        <p> In this option, I will learn more about IT development and cybersecurity. I will learn a lot of programming languages like php, javascript, java, html/css and more.
+                        <p> In this option, I  will learn more about,networks. I will also learn about the role of each device on a network and how they work together, how each protocls work ...
                         </p>
                         <p style="text-align: center;">
                             <a class="button" href="images/Referenciel_BTS_SIO.pdf" target="_blank">Read More</a>
@@ -107,9 +107,9 @@
 
                 <div class="card">
                     <i class="fa-solid fa-network-wired"></i>
-                    <h5>SISR Option</h5>
+                    <h5>SLAM Option</h5>
                     <div class="pra">
-                        <p> Those who have chosen this option will learn more about,networks. They will learn about the role of each device on a network and how they work together.
+                        <p> Those who have chosen this option will learn more about IT development and cybersecurity. They will learn a lot of programming languages like php, javascript, java, html/css and more.
                         </p>
                         <p style="text-align: center;">
                             <a class="button" href="images/Referenciel_BTS_SIO.pdf" target="_blank">Read More</a>
