--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <i class="fa-solid fa-laptop-code"></i>
                     <h5>SISR Option</h5>
                     <div class="pra">
-                        <p> In this option, I  will learn more about,networks. I will also learn about the role of each device on a network and how they work together, how each protocls work ...
+                        <p> In this option, I  will learn more about, networks. I will also learn about the role of each device on a network and how they work together, how each protocls work ...
                         </p>
                         <p style="text-align: center;">
                             <a class="button" href="images/Referenciel_BTS_SIO.pdf" target="_blank">Read More</a>
@@ -109,7 +109,7 @@
                     <i class="fa-solid fa-network-wired"></i>
                     <h5>SLAM Option</h5>
                     <div class="pra">
-                        <p> Those who have chosen this option will learn more about IT development and cybersecurity. They will learn a lot of programming languages like php, javascript, java, html/css and more.
+                        <p> Those who have chosen this option will learn more about IT development. They will learn a lot of programming languages like php, html/css and more.
                         </p>
                         <p style="text-align: center;">
                             <a class="button" href="images/Referenciel_BTS_SIO.pdf" target="_blank">Read More</a>
